--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "body-parser": "^1.20.2",
     "dotenv": "^16.1.3",
     "express": "^4.18.2",
+    "http-status-codes": "^2.2.0",
     "jsonwebtoken": "^9.0.0",
     "mysql2": "^3.3.3",
     "nodemon": "^2.0.22",
